clusters/vps1/config/argocd/argocd-mtls.yaml
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: "strict-mtls"
  namespace: argocd
spec:
  mtls:
    mode: STRICT
