clusters/vps1/config/argocd/argocd-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  hosts:
  - "argocd-dev.kube.home"
  gateways:
  - istio-system/main-gateway
  http:
  - route:
    - destination:
        host: argo-cd-argocd-server
        port:
          number: 80
